--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> This is GIT Day 1 </h1>
-<h2> We are going to discuss about intro of GIT </h2>
+<h1> This is GIT Day 3 </h1>
+<h2> We are going to discuss about workflow of git </h2>
 </html>
